CollectionManagerTest, fixed ComareTo (MusicBand)